--- a/index.html
+++ b/index.html
@@ -13,25 +13,54 @@
             <div class="settings column">
                 <div class="settings-up row">                    
                     <div class="production row align-center">
-                        <img src="img/graph_empty.svg" alt="production" width="30px">
-                        <p class="text-gray">Производство</p>
+                        <img src="img/graph_empty.svg" alt="production" width="20px">
+                        <p class="text-gray text-medium">Производство</p>
                     </div>
-                    <div class="procucer-prices">Цены производителей</div>
-                    <div class="events">События</div>
+                    <div class="procucer-prices row align-center">
+                        <img src="img/price.svg" alt="production" width="20px">
+                        <p class="text-gray">Цены производителей</p>
+                    </div>
+                    <div class="events row align-center">
+                        <img src="img/events.svg" alt="production" width="20px">
+                        <p class="text-gray text-medium">События</p>
+                    </div>
                 </div>
                 <div class="settings-down row">
-                    <div class="export-import">Экспорт/импорт</div>
-                    <div class="retail-prices">Потребительские цены</div>
-                    <div class="notification">Сработало уведомление</div>
+                    <div class="export-import row align-center">
+                        <img src="img/export.svg" alt="production" width="20px">
+                        <p class="text-gray text-medium">Экспорт/импорт</p>
+                    </div>
+                    <div class="retail-prices row align-center">
+                        <img src="img/busket.png" alt="production" width="20px">
+                        <p class="text-gray text-medium">Потребительские цены</p>
+                    </div>
+                    <div class="notification row align-center">
+                        <img src="img/notify.png" alt="production" width="20px">
+                        <p class="text-gray text-medium">Сработало уведомление</p>    
+                    </div>
                 </div>
             </div>
         </header>
         <menu>
-            <div class="general index">ОБЩИЕ ИНДИКАТОРЫ</div>
-            <div class="agr index">ИНДЕКС ПР-ВА ПРОДУКЦИИ С/Х</div>
-            <div class="food index">ИНДЕКС ПР-ВА ПИЩЕВОЙ ПРОДУКЦИИ</div>
-            <div class="export index">ЭКСПОРТ млрд $ США</div>
-            <div class="consumption index">ИПЦ г/г</div>
+            <div class="general row align-center">
+                <p class="text-gray">ОБЩИЕ ИНДИКАТОРЫ</p>
+            </div>
+            <div class="agro row align-center">
+                <img src="img/agro_index.png" alt="indicator" height="40px">
+                <p class="text-gray">ИНДЕКС ПР-ВА ПРОДУКЦИИ С/Х</p>
+            </div>
+            <div class="food row align-center">
+                <img src="img/food_index.png" alt="indicator"  height="40px">
+                <p class="text-gray">ИНДЕКС ПР-ВА ПИЩЕВОЙ ПРОДУКЦИИ</p>
+            </div>
+            <div class="export row align-center">
+                <img src="img/export_index.png" alt="indicator"  height="40px">
+                <p class="text-gray">ЭКСПОРТ млрд $ США</p>
+            </div>
+            <div class="consumption row align-center">
+                <img src="img/consumption_index.png" alt="indicator"  height="40px">
+                <p class="text-gray">ИПЦ г/г</p>
+            </div>
         </menu>
         <div class="row">
             <div class="column left ">
@@ -526,10 +555,22 @@
                 <div class="assets">
                     <h2>СРЕДСТВА ПРОИЗВОДСТВА</h2>
                     <div class="asset-items">
-                        <div class="asset">Ввод земель в оборот</div>
-                        <div class="asset">Обеспеченность техникой</div>
-                        <div class="asset">Обеспеченность мин.уд.</div>
-                        <div class="asset">Обеспеченность семенами</div>
+                        <div class="asset-land row align-center">
+                            <img src="img/asset-land.png" alt="asset land">
+                            <p class="text-small text-gray">Ввод земель в оборот</p>
+                        </div>
+                        <div class="asset-technics row align-center">
+                            <img src="img/asset-technics.png" alt="asset land">
+                            <p class="text-small text-gray">Обеспеченность техникой</p>
+                        </div>
+                        <div class="asset-shit row align-center">
+                            <img src="img/asset-shit.png" alt="asset land">
+                            <p class="text-small text-gray">Обеспеченность мин.уд.</p>
+                        </div>
+                        <div class="asset-seeds row align-center">
+                            <img src="img/asset-seeds.png" alt="asset land">
+                            <p class="text-small text-gray">Обеспеченность семенами</p>
+                        </div>
                     </div>
                 </div>
             </div>
