--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght,CRSV@100..900,0&family=Golos+Text:wght@400..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
@@ -100,6 +101,7 @@
                     </div>
                 </div>
             </div>
+           <div class="ipc-overlay"><a href="hello.html">Перейти</a></div>
         </menu>
         <div class="plants agrisector">
             <p class="text-big text-center agrititle text-white">РАСТЕНИЕВОДСТВО</p>
