--- a/index.html
+++ b/index.html
@@ -225,6 +225,26 @@
                         <img src="img/graph-up.svg" alt="fact" width="20px">
                         <img src="img/graph-up.svg" alt="fact" width="20px">
                         <img src="img/graph-up.svg" alt="fact" width="20px">
+                        <div class="popup">
+                            <div class="popup-up row align-center">
+                                <p class="text-medium">ФАКТ с начала 25 года</p>
+                                <div class="plan-info row">
+                                    <p class="text-small">план 25</p>
+                                    <img src="img/notify.png" alt="notify" width="15px" height="15px">
+                                    <p class="text-small">17 188</p>
+                                    <p class="text-small">-661(-3.8%)</p>
+                                </div>
+                            </div>
+                            <div class="popup-down row align-center">
+                                <p class="text-medium">1592</p>
+                                <div class="fact-info row">
+                                    <p class="text-small">факт 24</p>
+                                    <img src="img/notify.png" alt="notify" width="15px" height="15px">
+                                    <p class="text-small">16 795</p>
+                                    <p class="text-small">-267(-1.6%)</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="production row">
                         <p class="text-vertical">ПР-З</p>
