--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
                 <div class="column">
                     <div class="fact row">
                         <p class="text-vertical">ФАКТ</p>
-                        <img src="img/graph-up.svg" alt="fact" width="20px">
-                        <img src="img/graph-up.svg" alt="fact" width="20px">
-                        <img src="img/graph-up.svg" alt="fact" width="20px">
-                        <img src="img/graph-up.svg" alt="fact" width="20px">
-                        <img src="img/graph-up.svg" alt="fact" width="20px">
+                        <img src="img/graph-up-red.png" alt="fact" width="20px">
+                        <img src="img/arrows-red.png" alt="fact" width="20px">
+                        <img src="img/hand-green.png" alt="fact" width="20px">
+                        <img src="img/basket-green.png" alt="fact" width="20px">
+                        <img src="img/bell-green.png" alt="fact" width="20px">
                         <div class="popup">
                             <div class="popup-up row align-center">
                                 <p class="text-medium">ФАКТ с начала 25 года</p>
